# Study_FastAPI

./: .gitmodules  README.md
practices/: activate.sh  alembic.ini  database.py  main.py  pyproject.toml
practices/migrations/: env.py
practices/migrations/versions/: 2025_08_13_1349-ca71bcb81946_add_user_table.py  2025_08_13_1445-9e8f9baa29e3_modify_user_table_column_name.py
practices/user/application/: user_service.py
practices/user/domain/: user.py
practices/user/domain/repository/: user_repo.py
practices/user/infra/db_models/: user.py
practices/user/infra/repository/: user_repo.py
practices/user/interface/controllers/: user_controller.py
practices/utils/: config.py
